--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 <head>
     <title>Odin Recipes</title>
     <meta charset = "UTF-8">
+    <link rel = "stylesheet" href="styles.css">
+
 </head>
 
 <body>
 <h1>Odin Recipes</h1>
 
+<div class = "center">
 <a href="recipes/chick-parm.html">Chicken Parmesan</a>
 
-<p><a href ="recipes/taco.html">Tacos</a></p>
+<a href ="recipes/taco.html">Tacos</a>
+</div>
 
 </body>
 
