--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -5,6 +5,7 @@
 <head>
     <title>Chicken Parmesan</title>
     <meta charset = "UTF-8">
+    <link rel = "stylesheet" href = "../styles.css">
 </head>
 
 <body>
